TinyButStrong 3.8.3

Skrol29, 2013-09-07

Change-log:
===========

- new parameter parallel

- tbs_plugin_html.php 1.0.8 : select work with values containing special HTML characters

- no HTML in error message when PHP in command line (CLI)

- Bug with parameter frm : leading zero + plus prefix or suffix may not format the numbre as expected.
  http://www.tinybutstrong.com/forum.php?thr=3208
  
- new way for subtemplate : use OldSubTpl
  take care the scripts used to use echo => add a parameter for compatibility
  
- replace @(string) with $this->meth_Misc_ToStr() because it may cause the script to stop with certan values
- support for DateTime objects and also objects with the magic method __toString().
- replace or  with ||
- replace and with &&

------------------------------------

TinyButStrong 3.8.2

Skrol29, 2013-04-20

Change-log:
===========

- Explicit error message when a colmun is missing for a grouping paremeter (headergrp, footergrp, splittergrp)

- Add option methods_allowed

------------------------------------

TinyButStrong 3.8.1

Skrol29, 2012-04-01

Change-log:
===========

PHP 5.4 :
Unexpected PHP error [Array to string conversion] severity [E_NOTICE] in [D:\Users\Qwerty\Dev HTML\Site Dev\svn_TinyButStrong\trunk\tbs_class.php line 72]

Unexpected PHP error [Array to string conversion] severity [E_NOTICE] in [D:\Users\Qwerty\Dev HTML\Site Dev\svn_TinyButStrong\trunk\tbs_class.php line 1369]

Plugin MergeOnFly