@@ -192,13 +192,13 @@ a.opt-name:hover {
       </tr>
       <tr>
         <td>Date:</td>
-        <td>2013-08-28</td>
+        <td>2013-10-08</td>
       </tr>
     </table>
   </div>
   <div style="margin:auto; width:500px; text-align:center;">
     <h1>TinyButStrong Documentation</h1>
-    <div class="txt-tiny">version 3.8</div>
+    <div class="txt-tiny">version 3.9</div>
     <div style="margin-top:10px;">Template Engine for Pro and Beginners<br>
       for PHP 5</div>
   </div>
